--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-react-native": "^3.2.0",
     "jest": "^21.2.1",
-    "react-test-renderer": "^16.2.0"
+    "react-test-renderer": "^16.2.0",
+    "sinon": "^4.1.4"
   },
   "scripts": {
     "test": "jest",
